This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php




Server Fixes

--If player had short last life or is twin, we don't even let them join a
  posse, to avoid confusion.  Otherwise, a seeminly large-enough posse might be
  ineffective.  A short life or twin player can still lead a posse or complete
  a solo kill in a low-pop area (but they don't count toward the population of
  the posse that they lead).




Version 330     2020-April-23

--Support for +becomeUseX tags, for non-use objects that should turn into a
  specific use count in the newTarget after a transition.  This allows (for
  example), the same scrap box to result from scrapping different objects with
  differing amounts of resultings scrap metal.  A nozzle is +becomeUse2, while
  a full piston head is +becomeUse6.




Version 328     2020-April-17

--Don't interrupt character's speech with automatic +FAMILY+ marker above their
  head.  Fixes #588

--Whenever you get an arrow pointing toward a person (baby, expert, leader,
  owner, visitor, etc), once that person is close, you see a label above their
  head.  Otherwise, they can be hard to locate in a crowd.





Server Fixes

--There are still food surpluses everywhere.  Food scale factor floor 0.5
  (was 1.0), eating bonus left alone. This increases food pressure long-term,
  but not too hard for Eve starts (b/c food scale factor still starts at 1.0).

--Food scaled on a gamma curve instead of linearly, allowing us to reduce
  effectiveness of small foods without affecting large-valued foods so much.
  Gamma starts at 1.0 and eventually reaches 1.5, with a half-life of 4
  generations.  By gen 20, a berry only provides 1 food, but a feast plate
  still provides 40.  Linear food scale factor can still apply on top of gamma
  (to scale all foods uniformly), but turning it off for now (setting floor
  back to 1.0).
